--- a/VoicevoxCoreNet/VoicevoxCoreNet.csproj
+++ b/VoicevoxCoreNet/VoicevoxCoreNet.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
