ymlに記述バージョンをテスト

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,5 +21,11 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Download voicevox_core
+      shell: pwsh
+      run: |
+        Invoke-WebRequest https://github.com/VOICEVOX/voicevox_core/releases/latest/download/download-linux-x64 -OutFile ./download-linux-x64
+        New-Item ./VoicevoxCoreNet.Tests/bin/Debug/net6.0 -ItemType Directory
+        download-linux-x64 --out ./VoicevoxCoreNet.Tests/bin/Debug/net6.0
     - name: Test
       run: dotnet test --no-build --verbosity normal
