--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,8 +23,6 @@ jobs:
       run: dotnet build --no-restore
     - name: Download voicevox_core
       shell: pwsh
-      run: |
-        dotnet tool install -g dotnet-script
-        dotnet script .\download_voicevox_core.csx
+      run: dotnet script ./download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
