--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Download voicevox_core
-      run: dotnet script ./download_voicevox_core.csx
+      run: |
+        chmod u+x ./download_voicevox_core.csx
+        dotnet script ./download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
