--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,6 @@ jobs:
       run: dotnet build --no-restore
     - name: Download voicevox_core
       run: |
-        chmod u+x ./download_voicevox_core.csx
-        dotnet script ./download_voicevox_core.csx
+        dotnet script download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
