--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,6 @@ jobs:
       run: dotnet build --no-restore
     - name: Download voicevox_core
       run: |
-        dotnet script download_voicevox_core.csx
+        dotnet script ./VoicevoxCoreNet/download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
