--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,9 +22,8 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Download voicevox_core
-      shell: pwsh
       run: |
-        dir
-        dotnet script ./VoicevoxCoreNet/download_voicevox_core.csx
+        ls -l
+        dotnet script ./download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
