--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,9 @@ jobs:
       run: dotnet build --no-restore
     - name: Download voicevox_core
       run: |
-        ls -l
-        dotnet script ./download_voicevox_core.csx
+        chmod +x $CSX_FileName
+        dotnet script $CSX_FileName
+      env: 
+        CSX_FileName: ./download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
