chmodの場所変更

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,9 +21,11 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: addx
+      run: chmod +x ./download_voicevox_core.csx
     - name: Download voicevox_core
       run: |
-        chmod +x ./download_voicevox_core.csx
+        : # chmod +x ./download_voicevox_core.csx
         dotnet script ./download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
