--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,13 +21,12 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: addx
+    - name: install dotnet script
       run: |
-        chmod +x ./download_voicevox_core.csx
-        ls -l
+        dotnet tool install -g dotnet-script
     - name: Download voicevox_core
       run: |
-        : # chmod +x ./download_voicevox_core.csx
-        dotnet-script ./download_voicevox_core.csx
+        chmod +x ./download_voicevox_core.csx
+        dotnet script ./download_voicevox_core.csx
     - name: Test
       run: dotnet test --no-build --verbosity normal
