--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Download voicevox_core
       run: |
         chmod +x ./download_voicevox_core.csx
-        dotnet script ./download_voicevox_core.csx
+        dotnet script ./download_voicevox_core.csx -- --output ./VoicevoxCoreNet.Tests/bin/Debug/net6.0
         
     - name: Test
       run: dotnet test --no-build --verbosity normal
