--- a/VoicevoxCoreNet/VoicevoxCoreNet.csproj
+++ b/VoicevoxCoreNet/VoicevoxCoreNet.csproj
@@ -5,6 +5,7 @@
     <LangVersion>10.0</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <PackageId>shigobu.VoicevoxCoreNet</PackageId>
     <Version>1.0.0</Version>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
