--- a/VoicevoxCoreNet/VoicevoxCoreNet.csproj
+++ b/VoicevoxCoreNet/VoicevoxCoreNet.csproj
@@ -1,12 +1,12 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <PackageId>shigobu.VoicevoxCoreNet</PackageId>
-    <Version>1.0.0</Version>
+    <Version>999.999.999</Version>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
