--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Download voicevox_core
       env: SCRIPT_PATH: ./tools/download_voicevox_core.csx
       run: |
-        chmod +x $SCRIPT_PATH
-        dotnet script $SCRIPT_PATH -- --output ./VoicevoxCoreNet.Tests/bin/Release/net6.0
+        chmod +x ${{SCRIPT_PATH}}
+        dotnet script ${{SCRIPT_PATH}} -- --output ./VoicevoxCoreNet.Tests/bin/Release/net6.0
         
     - name: Test
       run: dotnet test --no-build --verbosity normal -c Release
