--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,8 @@ jobs:
       run: dotnet tool install -g dotnet-script
 
     - name: Download voicevox_core
-      env: SCRIPT_PATH: ./tools/download_voicevox_core.csx
+      env: 
+        SCRIPT_PATH: ./tools/download_voicevox_core.csx
       run: |
         chmod +x ${{SCRIPT_PATH}}
         dotnet script ${{SCRIPT_PATH}} -- --output ./VoicevoxCoreNet.Tests/bin/Release/net6.0
