--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,11 +29,11 @@ jobs:
       run: dotnet tool install -g dotnet-script
 
     - name: Download voicevox_core
+      run: |
+        chmod +x $SCRIPT_PATH
+        dotnet script $SCRIPT_PATH -- --output ./VoicevoxCoreNet.Tests/bin/Release/net6.0
       env: 
         SCRIPT_PATH: ./tools/download_voicevox_core.csx
-      run: |
-        chmod +x ${{SCRIPT_PATH}}
-        dotnet script ${{SCRIPT_PATH}} -- --output ./VoicevoxCoreNet.Tests/bin/Release/net6.0
         
     - name: Test
       run: dotnet test --no-build --verbosity normal -c Release
